--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <base target="_top">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Timesheet App</title>
+    <title>Tempus</title>
     <style>
       body { margin:0; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto',sans-serif; background:#f8fafc; color:#0f172a; }
       .container { max-width: 960px; margin: 0 auto; padding: 16px; }
@@ -32,7 +32,7 @@
   <body>
     <div class="container">
       <div class="toolbar">
-        <h1>Timesheet</h1>
+        <h1>Tempus</h1>
         <div id="sync-status" class="muted">Idle</div>
       </div>
 
